samples/_failures_safe/1761361634_70b0bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d69ba7d4.c: In function ‘main’:
./samples/SAFE/__tmp_d69ba7d4.c:156:12: error: expected identifier or ‘(’ at end of input
  156 |     struct Matrix
      |            ^~~~~~
./samples/SAFE/__tmp_d69ba7d4.c:156:12: error: expected declaration or statement at end of input
